# pokemon-llm

./: .gitattributes  .gitignore  README.md  answer.py  app.py  chatbot.py  ingest.py  main.py  pokemon_chatbot.ipynb  pyproject.toml  requirements.txt  test_category_fix.py  test_chatbot.ipynb  test_embedding.ipynb  upload_to_hf.py
.agent/rules/: jupyter-notebook.md  use-uv.md
agents/: task_tech_data_agent.md  tech_data_agent.py
ai_tools/: __init__.py  tools.py
data/: generate_data.ipynb  generate_parquet.py  items_list.json  moves_list.json  pokemon_list.json  upload_to_hugginface.ipynb
data/dataset/: README.md  pokemon_data.parquet
data/raw/: 0001_bulbasaur.md  0003_venusaur.json  0004_charmander.json  0004_charmander.md  0005_charmeleon.md  0006_charizard.md  0007_squirtle.json  0007_squirtle.md  0008_wartortle.md  0009_blastoise.json  0009_blastoise.md  0010_caterpie.json  0011_metapod.md  0013_weedle.md  0015_beedrill.json  0015_beedrill.md  0018_pidgeot.json  0019_rattata.json  0019_rattata.md  0020_raticate.json  0022_fearow.json  0023_ekans.json  0024_arbok.md  0025_pikachu.md  0026_raichu.md  0027_sandshrew.md  0028_sandslash.json  0029_nidoran-f.json  0030_nidorina.json  0032_nidoran-m.json  0035_clefairy.json  0037_vulpix.json  0037_vulpix.md  (+223 more)
db/: chroma.sqlite3
db_tech/: create_db.py  create_tech_database.py  models.py  tech.db  tech_data_tool.py
db_tools/: ingest.py  rag_data_tool.py
pokemon_tools/: __init__.py  inspect_move.py  pokemon_client.py  verify_move_details.py
tests/: test_complex_query.py  test_tech_db.py  verify_tech_agent.py
(+8639 files in other folders)
