[project]
name = "pokemon-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "gradio>=6.3.0",
    "ipykernel>=7.1.0",
    "ipython>=8.18.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "openai>=2.14.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.10",
]

[tool.pyrefly]
project-includes = ["**/*.py","**/*.ipynb"]
project-excludes = ["**/node_modules", "**/__pycache__", "**/*venv/**", "**/.[!/.]*/**", "**/community-contributions", "**/community-contributions/**", "**/community_contributions", "**/community_contributions/**"]
use-ignore-files = true
search-path = ["."]
